--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "node server/index.js",
+    "start": "node server/server.js",
     "build": "vite build",
     "postinstall": "npm run build",
     "lint": "eslint .",
@@ -21,7 +21,6 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
-    "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
     "mssql": "^12.2.0",
     "postcss": "^8.5.6",
